ui/ux enhancements, navigation, light & dark themes, and mobile ui improvements, and contribute page

--- a/client/src/css/quasar.variables.scss
+++ b/client/src/css/quasar.variables.scss
@@ -1,1 +1,8 @@
-// Configure Quasar style variables here
+$primary: #58a6ff;
+$positive: #347d39;
+$negative: #ea5c53;
+$warning: #daaa3f;
+$info: #484f58;
+$dark: #151b23;
+$dark-page: #212830;
+$grey: #e0e0e0;
